--- a/SchoolManagement/appsettings.json
+++ b/SchoolManagement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=tcp:s31.winhost.com;Initial Catalog=DB_171595_nxgendb;User ID=DB_171595_nxgendb_user;Password=Helloworld2025!;Integrated Security=False;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=Data/FaceRecon.db"
   },
   "Logging": {
     "LogLevel": {
